cabal-version:      2.2
name:               linear-apecs
version:            0.9.5
homepage:           https://github.com/jonascarpay/apecs#readme
license:            BSD-3-Clause
license-file:       LICENSE
author:             Jonas Carpay
maintainer:         jonascarpay@gmail.com
category:           Game, Control, Data
build-type:         Simple
synopsis:           Fast Entity-Component-System library for game programming
description:
  apecs is a fast, type-driven Entity-Component-System library for game programming.

extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: git://github.com/jonascarpay/apecs.git

library
  hs-source-dirs:   src
  exposed-modules:
    Apecs.Linear
    Apecs.Linear.Components
    Apecs.Linear.Core
    -- Apecs.Experimental.Components
    -- Apecs.Experimental.Reactive
    -- Apecs.Experimental.Stores
    -- Apecs.Experimental.Util
    Apecs.Linear.Stores
    Apecs.Linear.System
    -- Apecs.TH
    Apecs.Linear.Util

  other-modules:    Apecs.Linear.THTuples
  default-language: Haskell2010
  build-depends:
      array             >=0.4    && <0.6
    , base              >=4.9    && <5
    , linear-base       >=0.3    && <0.4
    , containers        >=0.5    && <0.8
    , exceptions        >=0.10.0 && <0.11
    , mtl               >=2.2    && <2.3
    , template-haskell  >=2.12   && <3
    , vector            >=0.11   && <0.14

  mixins:           base (Prelude as Prelude.Base),
                    base hiding (Prelude),
                    linear-base (Prelude.Linear as Prelude),
                    linear-base
  ghc-options:      -Wall
  default-extensions: LinearTypes, QualifiedDo, BlockArguments
  

test-suite apecs-test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  build-depends:
      linear-apecs
    , base        >=4.9  && <5
    , containers  >=0.5  && <0.8
    , linear      >=1.20 && <2
    , linear-base
    , QuickCheck  >=2.10 && <3
    , vector      >=0.10 && <0.14

  default-language: Haskell2010
  ghc-options:      -Wall
  mixins:           base hiding (Prelude),
                    linear-base (Prelude.Linear as Prelude),
                    linear-base

benchmark apecs-bench
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          Main.hs
  build-depends:
      linear-apecs
    , base       >=4.9  && <5
    , linear-base
    , criterion  >=1.3  && <2
    , linear     >=1.20 && <2

  default-language: Haskell2010
  ghc-options:
    -Wall -O2 -optlo-O3 -threaded -funfolding-use-threshold1000
    -funfolding-keeness-factor1000
  mixins:           base (Prelude as Prelude.Base),
                    base hiding (Prelude),
                    linear-base (Prelude.Linear as Prelude),
                    linear-base

-- -fllvm
